z-index link fixed

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -142,7 +142,6 @@ a {
   color: #4d33ac;
   font-weight: 700;
   cursor: pointer;
-  z-index: 9999999999;
   display: flex;
   justify-content: center;
   align-items: center;
